--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. His research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). He has published around 20 papers in prestigious journals and conferences such as IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Image Processing (TIP), IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), IEEE Transactions on Multimedia (TMM), Pattern Recognition (PR), European Conference on Computer Vision (ECCV), International Conference on Computer Vision (ICCV), and ACM International Conference on Multimedia (ACMMM). He received several premium awards including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the Winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc.
+	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. His research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). He has published around 20 papers in prestigious journals and conferences such as IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Image Processing (TIP), IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), IEEE Transactions on Multimedia (TMM), Pattern Recognition (PR), European Conference on Computer Vision (ECCV), International Conference on Computer Vision (ICCV), Association for the Advancement of Artificial Intelligence (AAAI), and ACM International Conference on Multimedia (ACMMM). He received several premium awards including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the Winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc.
 </p>
 
 
@@ -104,8 +104,8 @@
 <h3>2016-Present (Graduate Period)</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>Outstanding PhD Graduates in Shanghai, Shanghai, 2021.</td></tr> 
 		<tr><td>Research Fellowship Scheme, The Chinese University of Hong Kong, 2021.</td></tr> 
+		<tr><td>Outstanding PhD Graduates in Shanghai, Shanghai, 2021.</td></tr> 
 		<tr><td>Innovative and Intelligent Youth, East China Normal University, 2020. (0.5%)</td></tr> 	
 		<tr><td>Outstanding Student, East China Normal University, 2020. (3.0%)</td></tr> 	
 		<tr><td>Wisdom Scholarship, East China Normal University, 2020. (1.5%)</td></tr> 	
@@ -373,7 +373,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">Top computer vision conference. The most popular paper. 245 stars and 54 forks in Github.</font><br>
+		<font color="red">Top computer vision conference. The most popular paper. 244 stars and 54 forks in Github.</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
@@ -387,9 +387,7 @@
 
 
 <h2>Academic Services</h2>
-
 <h3>Selected Reviewer</h3>
-<h4>Journal</h4>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
@@ -410,12 +408,6 @@
 		<tr>
 			<td> IEEE Signal Processing Letters</td>
 		</tr>
-	</tbody>
-</table>
-
-<h4>Conference</h4>
-<table id="tbTeaching" border="0" width="100%">
-	<tbody>
 		<tr>
 			<td> International Conference on Multimedia and Expo (ICME-2021)</td>
 		</tr>
@@ -428,6 +420,17 @@
 	</tbody>
 </table>
 
+<h3>Technical Program Committee (TPC)</h3>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td> International Conference on Autonomic and Autonomous Systems (ICAS), 2021.</td>
+		</tr>
+		<tr>
+			<td> Transdisciplinary Information Sciences Conferences - Workshop on Algorithm and Big Data, 2022.</td>
+		</tr>
+	</tbody>
+</table>
 
 <h3>Association Member</h3>
 <table id="tbTeaching" border="0" width="100%">
