--- a/index_zw.html
+++ b/index_zw.html
@@ -64,7 +64,7 @@
 
 <h2>简介</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	我是香港中文大学数学人工智能研究中心的一名博后研究员。我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授 和 <b><a href="http://lokminglui.com/", target="_blank">雷乐铭</a></b> 教授。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b>张桂戌</b>教授 和 <b>方发明</b>教授 共同指导。他的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。他在著名的期刊和会议上发表了大约 20 篇论文，例如 IEEE Transactions on Neural Networks and Learning Systems (TNNLS)、IEEE Transactions on Image Processing (TIP)、IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)、IEEE Transactions on 多媒体 (TMM)、Pattern Recognition (PR)、欧洲计算机视觉会议 (ECCV) 和国际计算机视觉会议 (ICCV)、ACM International Conference on Multimedia (ACMMM)。他获得了多项优质奖项，包括2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）的冠军等。
+	我是香港中文大学数学人工智能研究中心的一名博后研究员。我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授 和 <b><a href="http://lokminglui.com/", target="_blank">雷乐铭</a></b> 教授。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b>张桂戌</b>教授 和 <b>方发明</b>教授 共同指导。他的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。他在著名的期刊和会议上发表了大约 20 篇论文，例如 IEEE Transactions on Neural Networks and Learning Systems (TNNLS)、IEEE Transactions on Image Processing (TIP)、IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)、IEEE Transactions on Multimedia (TMM)、Pattern Recognition (PR)、European Conference on Computer Vision (ECCV), International Conference on Computer Vision (ICCV), Association for the Advancement of Artificial Intelligence (AAAI), and ACM International Conference on Multimedia (ACMMM)。他获得了多项优质奖项，包括2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。
 </p>
 
 <h2>最新消息</h2>
@@ -99,8 +99,8 @@
 <h3>2016-现在 (研究生期间)</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>上海市优秀博士毕业生称号, 上海市教委, 2021.</td></tr> 
 		<tr><td>研究奖学金资助, 香港中文大学, 2021.</td></tr> 
+		<tr><td>上海市优秀博士毕业生称号, 上海市教委, 2021.</td></tr> 
 		<tr><td>创智青年称号, 华东师范大学, 2020. (0.5%)</td></tr> 	
 		<tr><td>优秀学生称号, 华东师范大学, 2020. (3.0%)</td></tr> 	
 		<tr><td>智慧奖学金, 华东师范大学, 2020. (1.5%)</td></tr> 	
@@ -370,7 +370,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">计算机视觉顶级会议。最受欢迎论文，在GitHub上有245颗Star，54个Fork。</font><br>
+		<font color="red">计算机视觉顶级会议。最受欢迎论文，在GitHub上有244颗Star，54个Fork。</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[代码]</a>
@@ -385,7 +385,6 @@
 
 <h2>学术服务</h2>
 <h3>精选审稿人</h3>
-<h4>期刊</h4>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
@@ -406,12 +405,6 @@
 		<tr>
 			<td> IEEE Signal Processing Letters</td>
 		</tr>
-	</tbody>
-</table>
-
-<h4>会议</h4>
-<table id="tbTeaching" border="0" width="100%">
-	<tbody>
 		<tr>
 			<td> International Conference on Multimedia and Expo (ICME-2021)</td>
 		</tr>
@@ -420,6 +413,18 @@
 		</tr>
 		<tr>
 			<td> International Conference on Pattern Recognition (ICPR-2020)</td>
+		</tr>
+	</tbody>
+</table>
+
+<h3>技术委员会委员</h3>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td> International Conference on Autonomic and Autonomous Systems (ICAS), 2021.</td>
+		</tr>
+		<tr>
+			<td> Transdisciplinary Information Sciences conferences - Workshop on Algorithm and Big Data, 2022.</td>
 		</tr>
 	</tbody>
 </table>
@@ -440,10 +445,10 @@
 			<td> 中国人工智能学会（CAAI）会员</td>
 		</tr>
 		<tr>
-			<td> 丛林蜂工作室（CLF Studio）创始人 【非营利学生创新工作室】</td>
+			<td> 丛林蜂工作室（CLF Studio）创始人【非营利学生创新工作室】</td>
 		</tr>
 		<tr>
-			<td> <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> 创始人 【隶属于CLF-AI的非营利性图像处理中心】</td>
+			<td> <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> 发起人【隶属于CLF-AI的非营利性图像处理中心】</td>
 		</tr>
 	</tbody>
 </table>
