--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. His research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). He has published around 20 papers in prestigious journals and conferences such as IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Image Processing (TIP), IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), IEEE Transactions on Multimedia (TMM), Pattern Recognition (PR), European Conference on Computer Vision (ECCV), International Conference on Computer Vision (ICCV), Association for the Advancement of Artificial Intelligence (AAAI), and ACM International Conference on Multimedia (ACMMM). He received several premium awards including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the Winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc.
+	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. His research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). He has published 20 papers in top journals and conferences such as IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Image Processing (TIP), IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), IEEE Transactions on Multimedia (TMM), Pattern Recognition (PR), European Conference on Computer Vision (ECCV), International Conference on Computer Vision (ICCV), Association for the Advancement of Artificial Intelligence (AAAI), and ACM International Conference on Multimedia (ACMMM). He received several premium awards including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc.
 </p>
 
 
 <h2>News</h2>
 
-<h3>2018-Present, 20 Papers</h3>
+<h3>2018-Now, 20 Papers</h3>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>One paper is accepted by AAAI 2021.</td></tr> 
@@ -294,6 +294,43 @@
 
 	<tr>	
 		<td width="206">
+		<img src="./indexpics/MSRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
+		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
+		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
+		<font color="red">Top computer vision conference. The most popular paper. 244 stars and 54 forks in Github.</font><br>
+		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
+        <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
+		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
+		<a href="https://junchenglee.com/projects/ECCV2018_MSRN", target="_blank">[Homepage]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/SRRFN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/ICCVW_LCI_2019.pdf" target="_blank">Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution</a><br>
+		<b>Juncheng Li</b>, Yiting Yuan, Kangfu Mei, and Faming Fang.
+		<p><em>International Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
+		<font color="red">Oral Presentation</font><br>
+		<a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[Paper]</a>
+        <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[Poster]</a>
+        <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[Slides]</a>
+		<a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[Code]</a>
+		<a href="https://junchenglee.com/projects/ICCVW2019_SRRFN", target="_blank">[Homepage]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+    <tr></tr>
+
+	<tr>	
+		<td width="206">
 		<img src="./indexpics/ICCV2021.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="paper/ICCV_2021.pdf" target="_blank">Structure-Preserving Deraining with Residue Channel Prior Guidance</a><br>
@@ -344,45 +381,7 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-	
 
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/SRRFN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="paper/ICCVW_LCI_2019.pdf" target="_blank">Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution</a><br>
-		<b>Juncheng Li</b>, Yiting Yuan, Kangfu Mei, and Faming Fang.
-		<p><em>International Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
-		<font color="red">Oral Presentation</font><br>
-		<a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[Paper]</a>
-        <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[Poster]</a>
-        <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[Slides]</a>
-		<a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[Code]</a>
-		<a href="https://junchenglee.com/projects/ICCVW2019_SRRFN", target="_blank">[Homepage]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-    <tr></tr>
-
-
-    <tr>	
-		<td width="206">
-		<img src="./indexpics/MSRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
-		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
-		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">Top computer vision conference. The most popular paper. 244 stars and 54 forks in Github.</font><br>
-		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
-        <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
-		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
-		<a href="https://junchenglee.com/projects/ECCV2018_MSRN", target="_blank">[Homepage]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
 </tbody></table>
 
 
@@ -562,7 +561,7 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>     
 <br>
-&copy; Juncheng Li | Last updated: 2021-11
+&copy; Juncheng Li | Last updated: 2021-12
 </center>
 </p>
 
