--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. His research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). He has published 20 papers in top journals and conferences such as IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Image Processing (TIP), IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), IEEE Transactions on Multimedia (TMM), Pattern Recognition (PR), European Conference on Computer Vision (ECCV), International Conference on Computer Vision (ICCV), Association for the Advancement of Artificial Intelligence (AAAI), and ACM International Conference on Multimedia (ACMMM). He received several premium awards including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc.
+	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. His research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). He has published 20 papers in top journals and conferences such as IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Image Processing (TIP), IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), IEEE Transactions on Multimedia (TMM), Pattern Recognition (PR), European Conference on Computer Vision (ECCV), International Conference on Computer Vision (ICCV), Association for the Advancement of Artificial Intelligence (AAAI), and ACM International Conference on Multimedia (ACMMM). He received several premium awards including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. He also serves as a reviewer for more than 20 journals/conferences, including TIP, TMM, Information Science,  Pattern Recognition, and Knowledge-Based Systems.
 </p>
 
 
@@ -327,7 +327,23 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
+	<tr></tr>
+	
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/HERN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="paper/ICCVW_AIM_2019.pdf" target="_blank">HighEr-Resolution Network for Image Demosaicing and Enhancing</a><br>
+		Kangfu Mei, <b>Juncheng Li</b>, Jiajie Zhang, Haoyu Wu, Jie Li, and Rui Huang.
+		<p><em>International Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
+		<font color="red">AIM2019 Winner</font><br> 
+		<a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
+        <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[Code]</a>
+		</td>
+	</tr>
+	<tr></tr>
     <tr></tr>
+	<tr></tr>
 
 	<tr>	
 		<td width="206">
@@ -365,17 +381,17 @@
     <tr></tr>
 	<tr></tr>
 
-
-    <tr>	
+	<tr>	
 		<td width="206">
-		<img src="./indexpics/HERN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		<img src="./indexpics/AAAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="paper/ICCVW_AIM_2019.pdf" target="_blank">HighEr-Resolution Network for Image Demosaicing and Enhancing</a><br>
-		Kangfu Mei, <b>Juncheng Li</b>, Jiajie Zhang, Haoyu Wu, Jie Li, and Rui Huang.
-		<p><em>International Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
-		<font color="red">AIM2019 Winner</font><br> 
-		<a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
-        <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[Code]</a>
+		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution</a><br>
+		Guangwei Gao, Wenjie Li, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
+		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
+		<font color="red">Top artificial intelligence conference. *Corresponding author.</font><br>
+		[Paper]
+		[Poster]
+        <a href="The code is available at \url{https://github.com/IVIPLab/FDIWN", target="_blank">[Code]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -494,7 +510,7 @@
 	</tbody>
 </table>
 
-<h2>Meeting (2016.9-Present)</h2>
+<h2>Meeting (2016.9-Now)</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
