--- a/index_zw.html
+++ b/index_zw.html
@@ -64,7 +64,7 @@
 
 <h2>简介</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	我是香港中文大学数学人工智能研究中心的一名博后研究员。我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授 和 <b><a href="http://lokminglui.com/", target="_blank">雷乐铭</a></b> 教授。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b>张桂戌</b>教授 和 <b>方发明</b>教授 共同指导。他的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。他在著名的期刊和会议上发表了20篇论文，例如 IEEE Transactions on Neural Networks and Learning Systems (TNNLS)、IEEE Transactions on Image Processing (TIP)、IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)、IEEE Transactions on Multimedia (TMM)、Pattern Recognition (PR)、European Conference on Computer Vision (ECCV), International Conference on Computer Vision (ICCV), Association for the Advancement of Artificial Intelligence (AAAI), ACM International Conference on Multimedia (ACMMM)。他获得了多项优质奖项，包括2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。
+	我是香港中文大学数学人工智能研究中心的一名博后研究员。我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授 和 <b><a href="http://lokminglui.com/", target="_blank">雷乐铭</a></b> 教授。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b>张桂戌</b>教授 和 <b>方发明</b>教授 共同指导。他的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。他在著名的期刊和会议上发表了20篇论文，例如 IEEE Transactions on Neural Networks and Learning Systems (TNNLS)、IEEE Transactions on Image Processing (TIP)、IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)、IEEE Transactions on Multimedia (TMM)、Pattern Recognition (PR)、European Conference on Computer Vision (ECCV), International Conference on Computer Vision (ICCV), Association for the Advancement of Artificial Intelligence (AAAI), ACM International Conference on Multimedia (ACMMM)。他获得了多项优质奖项，包括2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。他同时还担任包括TIP、TMM、Information Science、Pattern Recognition和Knowledge-Based Systems在内的20多个期刊会议审稿人。
 </p>
 
 <h2>最新消息</h2>
@@ -325,7 +325,23 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
+	<tr></tr>
+	
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/HERN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="paper/ICCVW_AIM_2019.pdf" target="_blank">HighEr-Resolution Network for Image Demosaicing and Enhancing</a><br>
+		Kangfu Mei, <b>Juncheng Li</b>, Jiajie Zhang, Haoyu Wu, Jie Li, and Rui Huang.
+		<p><em>IInternational Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
+		<font color="red">AIM2019 图像增强挑战赛冠军模型。</font><br> 
+		<a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[论文]</a>
+        <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[代码]</a>
+		</td>
+	</tr>
+	<tr></tr>
     <tr></tr>
+	<tr></tr>
 
 	<tr>	
 		<td width="206">
@@ -361,17 +377,18 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-	
-    <tr>	
+
+	<tr>	
 		<td width="206">
-		<img src="./indexpics/HERN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		<img src="./indexpics/AAAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="paper/ICCVW_AIM_2019.pdf" target="_blank">HighEr-Resolution Network for Image Demosaicing and Enhancing</a><br>
-		Kangfu Mei, <b>Juncheng Li</b>, Jiajie Zhang, Haoyu Wu, Jie Li, and Rui Huang.
-		<p><em>IInternational Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
-		<font color="red">AIM2019 图像增强挑战赛冠军模型。</font><br> 
-		<a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[论文]</a>
-        <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[代码]</a>
+		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution</a><br>
+		Guangwei Gao, Wenjie Li, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
+		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
+		<font color="red">人工智能顶会. *通讯作者.</font><br>
+		[论文]
+		[海报]
+        <a href="The code is available at \url{https://github.com/IVIPLab/FDIWN", target="_blank">[代码]</a>
 		</td>
 	</tr>
 	<tr></tr>
