--- a/index.html
+++ b/index.html
@@ -424,13 +424,13 @@
 			<td> IEEE Signal Processing Letters</td>
 		</tr>
 		<tr>
-			<td> International Conference on Multimedia and Expo (ICME-2021)</td>
+			<td> ICME-2021</td>
 		</tr>
 		<tr>
-			<td> British Machine Vision Conference (BMVC-2020, 2021)</td>
+			<td> BMVC-2020, 2021</td>
 		</tr>
 		<tr>
-			<td> International Conference on Pattern Recognition (ICPR-2020)</td>
+			<td> ICPR-2020</td>
 		</tr>
 	</tbody>
 </table>
