--- a/index_zw.html
+++ b/index_zw.html
@@ -159,7 +159,7 @@
 
 
 
-<h2>精选出版物 [总引用: 575] [最高引用: 318] </h2>
+<h2>精选出版物 [总引用: 582] [最高引用: 320] </h2>
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -399,6 +399,16 @@
 
 
 <h2>学术服务</h2>
+
+<h3>组织者</h3>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td> <a href="https://guangweigao.github.io/icme22ss.html", target="_blank">Robust Representation Learning for Multimedia Image Understanding</a>- Special session on ICME 2022.</td>
+		</tr>
+	</tbody>
+</table>
+
 <h3>精选审稿人</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
