--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 575] [Highest Citation: 318]</h2>
+<h2>Selected Publications [Total Citations: 582] [Highest Citation: 320]</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
@@ -402,6 +402,16 @@
 
 
 <h2>Academic Services</h2>
+
+<h3>Organizer</h3>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td> <a href="https://guangweigao.github.io/icme22ss.html", target="_blank">Robust Representation Learning for Multimedia Image Understanding</a>- Special session on ICME 2022.</td>
+		</tr>
+	</tbody>
+</table>
+
 <h3>Selected Reviewer</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
