--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<h1>Juncheng Li (李俊诚)</h1> 
 				</div>
 
-				<h3> Postdoctoral Fellow </h3>
+				<h3> Postdoctoral Researcher </h3>
 				<p>
 					<a href="http://cmai.math.cuhk.edu.hk/index.html">Center for Mathematical Artificial Intelligence (CMAI)</a>, <br>
 					Department of Mathematics,<br>
@@ -68,7 +68,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. His research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). He has published 20 papers in top journals and conferences, including TNNLS, TIP, TCSVT, TMM, PR, ECCV, ICCV, AAAI, and ACMMM. He received several premium awards including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. He also serves as a reviewer for more than 20 journals/conferences, including TIP, TMM, INS, PR, KBS, and SPL.
+	Dr. Juncheng Li is a Postdoctoral Researcher at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. His research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). He has published 20 papers in top journals and conferences, including TNNLS, TIP, TCSVT, TMM, PR, ECCV, ICCV, AAAI, and ACMMM. He received several premium awards including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. He also serves as a reviewer for more than 20 journals/conferences, including TIP, TMM, INS, PR, KBS, and SPL.
 </p>
 
 
@@ -299,7 +299,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">Top computer vision conference. The most popular paper. 245 stars and 55 forks in Github.</font><br>
+		<font color="red">Top computer vision conference. The most popular paper. 246 stars and 57 forks in Github.</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
