--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 615] [Highest Citation: 338]</h2>
+<h2>Selected Publications [Total Citations: 616] [Highest Citation: 339]</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
@@ -420,6 +420,9 @@
 		</tr>
 		<tr>
 			<td> IEEE Transactions on Multimedia</td>
+		</tr>
+		<tr>
+			<td> IEEE Transactions on Circuits and Systems for Video Technology</td>
 		</tr>
         <tr>
 			<td> Information Science</td>
