--- a/index_zw.html
+++ b/index_zw.html
@@ -159,7 +159,7 @@
 
 
 
-<h2>精选出版物 [总引用: 615] [最高引用: 338] </h2>
+<h2>精选出版物 [总引用: 616] [最高引用: 339] </h2>
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -417,6 +417,9 @@
 		</tr>
 		<tr>
 			<td> IEEE Transactions on Multimedia</td>
+		</tr>
+		<tr>
+			<td> IEEE Transactions on Circuits and Systems for Video Technology</td>
 		</tr>
         <tr>
 			<td> Information Science</td>
