--- a/index_zw.html
+++ b/index_zw.html
@@ -159,7 +159,7 @@
 
 
 
-<h2>精选出版物 [总引用: 616] [最高引用: 339] </h2>
+<h2>精选出版物 [总引用: 619] [最高引用: 338] </h2>
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -260,7 +260,7 @@
 		<td> <a href="paper/TMM_2020.pdf" target="_blank">Luminance-aware Pyramid Network for Low-light Image Enhancement</a><br>
 		Jiaqian Li#, <b>Juncheng Li#</b>, Faming Fang, Fang Li, and Guixu Zhang.
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
-		<font color="red">#共同一作。由我指导。SCI-1区。</font><br> 
+		<font color="red">#共同一作。SCI-1区。</font><br> 
 		<a href="paper/TMM_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/LPNet-PyTorch", target="_blank">[代码]</a>
 		</td>
@@ -277,7 +277,7 @@
 		<td> <a href="https://ieeexplore.ieee.org/document/9473023" target="_blank">Efficient and Accurate Multi-scale Topological Network for Single Image Dehazing</a><br>
 		Qiaosi Yi#, <b>Juncheng Li#</b>, Faming Fang, Aiwen Jiang, Guixu Zhang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
-		<font color="red">#共同一作。由我指导。SCI-1区。</font><br> 
+		<font color="red">#共同一作。SCI-1区。</font><br> 
 		<a href="https://ieeexplore.ieee.org/document/9473023", target="_blank">[论文]</a>
 		</td>
 	</tr>
@@ -350,7 +350,7 @@
 		<td><a href="paper/ICCV_2021.pdf" target="_blank">Structure-Preserving Deraining with Residue Channel Prior Guidance</a><br>
 		Qiaosi Yi, <b>Juncheng Li</b>, Qinyan Dai, Faming Fang, Guixu Zhang, and Tieyong Zeng.
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
-		<font color="red">计算机顶级会议。由我指导。</font><br>
+		<font color="red">计算机顶级会议。</font><br>
 		<a href="paper/ICCV_2021.pdf", target="_blank">[论文]</a>
 		<a href="poster/ICCV_poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/Joyies/SPDNet", target="_blank">[代码]</a>
@@ -368,7 +368,7 @@
 		<td><a href="paper/ACMMM_2021.pdf" target="_blank">Feedback Network for Mutually Boosted Stereo Image Super-Resolution and Disparity Estimation</a><br>
 		Qinyan Dai, <b>Juncheng Li</b>, Qiaosi Yi, Faming Fang, and Guixu Zhang1g.
 		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACM MM</b></i>), 2021. <br>
-		<font color="red">多媒体顶级会议。由我指导。</font><br>
+		<font color="red">多媒体顶级会议。</font><br>
 		<a href="paper/ACMMM_2021.pdf", target="_blank">[论文]</a>
 		<a href="poster/ACMMM_poster.pdf", target="_blank">[海报]</a>
         <a href="#", target="_blank">[代码]</a>
