--- a/index_zw.html
+++ b/index_zw.html
@@ -64,7 +64,7 @@
 
 <h2>简介</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	我是香港中文大学数学人工智能研究中心的一名博后研究员。我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授 和 <b><a href="http://lokminglui.com/", target="_blank">雷乐铭</a></b> 教授。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b>张桂戌</b>教授 和 <b>方发明</b>教授 共同指导。他的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。他在著名的期刊和会议上发表了20篇论文，包括 TNNLS、TIP、TCSVT、TMM、PR、ECCV, ICCV, AAAI, ACMMM。他获得了多项优质奖项，包括2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。他同时还担任包括TIP、TMM、INS、PR、KBS和SPL在内的20多个期刊会议审稿人。
+	我是香港中文大学数学人工智能研究中心的一名博后研究员。我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授 和 <b><a href="http://lokminglui.com/", target="_blank">雷乐铭</a></b> 教授。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b>张桂戌</b>教授 和 <b>方发明</b>教授 共同指导。他的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。他在著名的期刊和会议上发表了20篇论文，包括 TNNLS、TIP、TCSVT、TMM、PR、ECCV, ICCV, AAAI, ACMMM。他获得了多项优质奖项，包括2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。他同时还担任包括TIP、TMM、TCSVT、INS、PR、KBS和SPL在内的20多个期刊会议审稿人。
 </p>
 
 <h2>最新消息</h2>
@@ -159,7 +159,7 @@
 
 
 
-<h2>精选出版物 [总引用: 624] [最高引用: 343] </h2>
+<h2>精选出版物 [总引用: 632] [最高引用: 347] </h2>
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -404,6 +404,9 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
+			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">NTIRE 2022: Stereo Image Super-Resolution Challenge.</td>
+		</tr>
+		<tr>
 			<td> <a href="https://guangweigao.github.io/icme22ss.html", target="_blank">Robust Representation Learning for Multimedia Image Understanding</a>- Special session on ICME 2022.</td>
 		</tr>
 	</tbody>
@@ -413,13 +416,7 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> IEEE Transactions on Image Processing</td>
-		</tr>
-		<tr>
-			<td> IEEE Transactions on Multimedia</td>
-		</tr>
-		<tr>
-			<td> IEEE Transactions on Circuits and Systems for Video Technology</td>
+			<td> IEEE TIP/ TMM/ TCSVT/ SPL</td>
 		</tr>
         <tr>
 			<td> Information Science</td>
@@ -431,16 +428,7 @@
 			<td> Knowledge-Based Systems</td>
 		</tr>
 		<tr>
-			<td> IEEE Signal Processing Letters</td>
-		</tr>
-		<tr>
-			<td> ICME-2021, 2022</td>
-		</tr>
-		<tr>
-			<td> BMVC-2020, 2021</td>
-		</tr>
-		<tr>
-			<td> ICPR-2020</td>
+			<td> ICME/ BMVC/ ICPR</td>
 		</tr>
 	</tbody>
 </table>
@@ -449,10 +437,10 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> International Conference on Autonomic and Autonomous Systems (ICAS), 2021.</td>
+			<td> <a href="http://www.tdiconference.com/wabd2022.html", target="_blank"></a>Transdisciplinary Information Sciences conferences - Workshop on Algorithm and Big Data, 2022.</td>
 		</tr>
 		<tr>
-			<td> Transdisciplinary Information Sciences conferences - Workshop on Algorithm and Big Data, 2022.</td>
+			<td> <a href="https://www.iaria.org/conferences2021/ComICAS21.html", target="_blank"></a>International Conference on Autonomic and Autonomous Systems (ICAS), 2021.</td>
 		</tr>
 	</tbody>
 </table>
