--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. His research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). He has published 20 papers in top journals and conferences, including TNNLS, TIP, TCSVT, TMM, PR, ECCV, ICCV, AAAI, and ACMMM. He received several premium awards including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. He also serves as a reviewer for more than 20 journals/conferences, including TIP, TMM, INS, PR, KBS, and SPL.
+	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. His research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). He has published 20 papers in top journals and conferences, including TNNLS, TIP, TCSVT, TMM, PR, ECCV, ICCV, AAAI, and ACMMM. He received several premium awards including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. He also serves as a reviewer for more than 20 journals/conferences, including TIP, TMM, TCSVT, INS, PR, KBS, and SPL.
 </p>
 
 
@@ -164,7 +164,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 624] [Highest Citation: 343]</h2>
+<h2>Selected Publications [Total Citations: 632] [Highest Citation: 347]</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
@@ -407,6 +407,9 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
+			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">NTIRE 2022: Stereo Image Super-Resolution Challenge.</td>
+		</tr>
+		<tr>
 			<td> <a href="https://guangweigao.github.io/icme22ss.html", target="_blank">Robust Representation Learning for Multimedia Image Understanding</a>- Special session on ICME 2022.</td>
 		</tr>
 	</tbody>
@@ -416,13 +419,7 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> IEEE Transactions on Image Processing</td>
-		</tr>
-		<tr>
-			<td> IEEE Transactions on Multimedia</td>
-		</tr>
-		<tr>
-			<td> IEEE Transactions on Circuits and Systems for Video Technology</td>
+			<td> IEEE TIP/ TMM/ TCSVT/ SPL</td>
 		</tr>
         <tr>
 			<td> Information Science</td>
@@ -434,30 +431,21 @@
 			<td> Knowledge-Based Systems</td>
 		</tr>
 		<tr>
-			<td> IEEE Signal Processing Letters</td>
-		</tr>
-		<tr>
-			<td> ICME-2021, 2022</td>
-		</tr>
-		<tr>
-			<td> BMVC-2020, 2021</td>
-		</tr>
-		<tr>
-			<td> ICPR-2020</td>
+			<td> ICME/ BMVC/ ICPR</td>
 		</tr>
 	</tbody>
 </table>
 
 <h3>Technical Program Committee (TPC)</h3>
 <table id="tbTeaching" border="0" width="100%">
-	<tbody>
-		<tr>
-			<td> International Conference on Autonomic and Autonomous Systems (ICAS), 2021.</td>
-		</tr>
-		<tr>
-			<td> Transdisciplinary Information Sciences Conferences - Workshop on Algorithm and Big Data, 2022.</td>
-		</tr>
-	</tbody>
+		<tbody>
+			<tr>
+				<td> <a href="http://www.tdiconference.com/wabd2022.html", target="_blank"></a>Transdisciplinary Information Sciences conferences - Workshop on Algorithm and Big Data, 2022.</td>
+			</tr>
+			<tr>
+				<td> <a href="https://www.iaria.org/conferences2021/ComICAS21.html", target="_blank"></a>International Conference on Autonomic and Autonomous Systems (ICAS), 2021.</td>
+			</tr>
+		</tbody>
 </table>
 
 <h3>Association Member</h3>
