--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">NTIRE 2022: Stereo Image Super-Resolution Challenge.</td>
+			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">NTIRE 2022: Stereo Image Super-Resolution Challenge.</a></td>
 		</tr>
 		<tr>
 			<td> <a href="https://guangweigao.github.io/icme22ss.html", target="_blank">Robust Representation Learning for Multimedia Image Understanding</a>- Special session on ICME 2022.</td>
@@ -440,10 +440,10 @@
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
 			<tr>
-				<td> <a href="http://www.tdiconference.com/wabd2022.html", target="_blank"></a>Transdisciplinary Information Sciences conferences - Workshop on Algorithm and Big Data, 2022.</td>
+				<td> <a href="http://www.tdiconference.com/wabd2022.html", target="_blank">Transdisciplinary Information Sciences conferences - Workshop on Algorithm and Big Data, 2022.</a></td>
 			</tr>
 			<tr>
-				<td> <a href="https://www.iaria.org/conferences2021/ComICAS21.html", target="_blank"></a>International Conference on Autonomic and Autonomous Systems (ICAS), 2021.</td>
+				<td> <a href="https://www.iaria.org/conferences2021/ComICAS21.html", target="_blank">International Conference on Autonomic and Autonomous Systems (ICAS), 2021.</a></td>
 			</tr>
 		</tbody>
 </table>
