--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 
 <h2>Academic Services</h2>
 
-<h3>Organizer</h3>
+<h3>Co-Organizer</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
@@ -413,6 +413,18 @@
 			<td> <a href="https://guangweigao.github.io/icme22ss.html", target="_blank">Robust Representation Learning for Multimedia Image Understanding</a>- Special session on ICME 2022.</td>
 		</tr>
 	</tbody>
+</table>
+
+<h3>Technical Program Committee (TPC)</h3>
+<table id="tbTeaching" border="0" width="100%">
+		<tbody>
+			<tr>
+				<td> <a href="http://www.tdiconference.com/wabd2022.html", target="_blank">Transdisciplinary Information Sciences conferences - Workshop on Algorithm and Big Data, 2022.</a></td>
+			</tr>
+			<tr>
+				<td> <a href="https://www.iaria.org/conferences2021/ComICAS21.html", target="_blank">International Conference on Autonomic and Autonomous Systems (ICAS), 2021.</a></td>
+			</tr>
+		</tbody>
 </table>
 
 <h3>Selected Reviewer</h3>
@@ -434,18 +446,6 @@
 			<td> ICME/ BMVC/ ICPR</td>
 		</tr>
 	</tbody>
-</table>
-
-<h3>Technical Program Committee (TPC)</h3>
-<table id="tbTeaching" border="0" width="100%">
-		<tbody>
-			<tr>
-				<td> <a href="http://www.tdiconference.com/wabd2022.html", target="_blank">Transdisciplinary Information Sciences conferences - Workshop on Algorithm and Big Data, 2022.</a></td>
-			</tr>
-			<tr>
-				<td> <a href="https://www.iaria.org/conferences2021/ComICAS21.html", target="_blank">International Conference on Autonomic and Autonomous Systems (ICAS), 2021.</a></td>
-			</tr>
-		</tbody>
 </table>
 
 <h3>Association Member</h3>
